--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "https://jordan6271.github.io/bootcamp-portfolio",
+    "engines": {
+        "node": "14.x"
+    },
     "dependencies": {
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.7",
