--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://jordan6271.github.io/bootcamp-portfolio",
     "dependencies": {
         "bootstrap": "^5.0.1",
+        "gh-pages": "^3.2.3",
         "nodemon": "^2.0.7",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.0",
@@ -12,6 +14,8 @@
         "react-scripts": "4.0.3"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
